--- a/gen/2023-11-29.html
+++ b/gen/2023-11-29.html
@@ -25,5 +25,13 @@
 <p>“One of my goals is to be able to provide encouragement to others who are developing their careers, just as others have invested in mine, passing good blessings from one generation to another.” </p>
 </blockquote>
 <p>Thank you, Burt! I will do likewise.</p>
-</body>
+
+        <footer>
+            <hr>
+            Copy, Right? |
+            <a href="/">Linkedin</a>
+            |
+            <a href="/">Github</a>
+        </footer>
+    </body>
 </html>
