--- a/gen/index.html
+++ b/gen/index.html
@@ -22,8 +22,9 @@
     <p>Hi! I am Ritav, UG student interested in CS Theory, ML and Security.</p>
     <ul>
 
+<li>2023-11-29 - <a href="2023-11-29.html">Good Blessings</a></li>
+<li>2023-12-03 - <a href="2023-12-03.html">URL in C</a></li>
 </ul>
-
         <footer>
             <hr>
             Copy, Right? |
