--- a/gen/2023-12-03.html
+++ b/gen/2023-12-03.html
@@ -34,5 +34,13 @@ hello, world
 <blockquote>
 <p>Except within a character constant, a string literal, or a comment, the characters // introduce a comment that includes all multibyte characters up to, but not including, the next new-line character. The contents of such a comment are examined only to identify multibyte characters and to find the terminating new-line character. </p>
 </blockquote>
-</body>
+
+        <footer>
+            <hr>
+            Copy, Right? |
+            <a href="/">Linkedin</a>
+            |
+            <a href="/">Github</a>
+        </footer>
+    </body>
 </html>
