--- a/gen/index.html
+++ b/gen/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>RITZFY</title>
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
