--- a/gen/2023-12-03.html
+++ b/gen/2023-12-03.html
@@ -8,7 +8,7 @@
         <ul class="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="/">Resume</a></li>
-            <li><a href="/">Contact</a><li>
+            <li><a href="mailto:hello.w28cw@slmail.me">Contact</a><li>
         </ul>
         <hr>
     </nav>
@@ -24,6 +24,7 @@ int main()
     return 0;
 }
 </code></pre>
+<p><img alt="Alt text" src="https://www.freecodecamp.org/news/content/images/size/w2000/2022/08/pexels-ken-tomita-389819.jpg" title="Optional title" /></p>
 <p>This code compiles and runs successfully.</p>
 <pre><code>$ c99 hello.c &amp;&amp; ./a.out
 hello, world
@@ -38,9 +39,9 @@ hello, world
         <footer>
             <hr>
             Copy, Right? |
-            <a href="/">Linkedin</a>
+            <a href="https://www.linkedin.com/in/ritav-j-029a9b246">Linkedin</a>
             |
-            <a href="/">Github</a>
+            <a href="https://github.com/ritzfy">Github</a>
         </footer>
     </body>
 </html>
