new file:   gen/2023-11-25.html

--- a/gen/index.html
+++ b/gen/index.html
@@ -23,8 +23,7 @@
     <h2>Posts</h2>
     <ul>
 
-<li>2023-11-29 - <a href="2023-11-29.html">Good Blessings</a></li>
-<li>2023-12-03 - <a href="2023-12-03.html">URL in C</a></li>
+<li>2023-11-25 - <a href="2023-11-25.html">The wonder that are SAT Solvers</a></li>
 </ul>
         <footer>
             <hr>
