--- a/gen/index.html
+++ b/gen/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>RITZFY</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <nav>
