--- a/gen/2023-11-25.html
+++ b/gen/2023-11-25.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <title>The wonder that are SAT Solvers</title>
 <link rel="stylesheet" href="../static/style.css">
