--- a/gen/2023-11-25.html
+++ b/gen/2023-11-25.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>The wonder that are SAT Solvers</title>
-<link rel="stylesheet" href="../static/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
