added a config for easier management

--- a/gen/index.html
+++ b/gen/index.html
@@ -8,18 +8,18 @@
         <nav>
         <ul class="menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="/">Resume</a></li>
-            <li><a href="mailto:hello.w28cw@slmail.me">Contact</a><li>
+            <li><a href="'/'">Resume</a></li>
+            <li><a href="mailto:'hello.w28cw@slmail.me'">Contact</a><li>
         </ul>
         <hr>
     </nav>
 
-    <img src="../assets/img/20231203--maharajatoad.jpeg" style="max-width:20%;min-width:40px;float:right;border-radius: 50%;" alt="profile">
+    <img src="'../assets/img/20231203--maharajatoad.jpeg'" style="max-width:20%;min-width:40px;float:right;border-radius: 50%;" alt="profile">
     <div>
-        <h1>RITAV JASH</h1>
-        <h3><em>On Computer Science, Math etc</em></h3>
+        <h1>'RITZFY'</h1>
+        <h3><em>'On Computer Science, Math etc'</em></h3>
     </div>
-    <p>Hi! I am Ritav, UG student interested in CS Theory, ML and Security.</p>
+    <p>'I’m Ritav, currently pursuing my undergraduate studies. My academic curiosity is piqued by the intricate theories of Computer Science, the transformative potential of Machine Learning, and the critical importance of Security in today’s digital age. I want to build systems which will support AI.'</p>
     <h2>Posts</h2>
     <ul>
 
@@ -28,9 +28,9 @@
         <footer>
             <hr>
             Copy, Right? |
-            <a href="https://www.linkedin.com/in/ritav-j-029a9b246">Linkedin</a>
+            <a href="'https://www.linkedin.com/in/ritav-j-029a9b246'">Linkedin</a>
             |
-            <a href="https://github.com/ritzfy">Github</a>
+            <a href="'https://github.com/ritzfy'">Github</a>
         </footer>
     </body>
 </html>
