--- a/gen/2023-11-25.html
+++ b/gen/2023-11-25.html
@@ -8,8 +8,8 @@
     <nav>
         <ul class="menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="'/'">Resume</a></li>
-            <li><a href="mailto:'hello.w28cw@slmail.me'">Contact</a><li>
+            <li><a href="/">Resume</a></li>
+            <li><a href="mailto:hello.w28cw@slmail.me">Contact</a><li>
         </ul>
         <hr>
     </nav>
@@ -18,9 +18,9 @@
         <footer>
             <hr>
             Copy, Right? |
-            <a href="'https://www.linkedin.com/in/ritav-j-029a9b246'">Linkedin</a>
+            <a href="https://www.linkedin.com/in/ritav-j-029a9b246">Linkedin</a>
             |
-            <a href="'https://github.com/ritzfy'">Github</a>
+            <a href="https://github.com/ritzfy">Github</a>
         </footer>
     </body>
 </html>
