--- a/gen/index.html
+++ b/gen/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>RITZFY</title>
+    <title>ritzfy</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,11 +16,11 @@
 
     <img src="../assets/img/20231203--maharajatoad.jpeg" style="max-width:20%;min-width:40px;float:right;border-radius: 50%;" alt="profile">
     <div>
-        <h1>RITZFY</h1>
-        <h3><em>On Computer Science, Math etc</em></h3>
+        <h1>ritzfy</h1>
+        <h3><em>On Computer Science, AI, Math etc</em></h3>
     </div>
     <p>I’m Ritav, currently pursuing my undergraduate studies. My academic curiosity is piqued by the intricate theories of Computer Science, the transformative potential of Machine Learning, and the critical importance of Security in today’s digital age. I want to build systems which will support AI.</p>
-    <h2>Posts</h2>
+    <h2>Activity</h2>
     <ul>
 
 <li>2023-11-25 - <a href="2023-11-25.html">The wonder that are SAT Solvers</a></li>
