modified:   config.ini

--- a/gen/index.html
+++ b/gen/index.html
@@ -14,7 +14,7 @@
         <hr>
     </nav>
 
-    <img src="../assets/img/20231203--maharajatoad.jpeg" style="max-width:20%;min-width:40px;float:right;border-radius: 50%;" alt="profile">
+    <img src="https://i.ibb.co/gPc0DTs/20231203-maharajatoad.jpg" style="max-width:20%;min-width:40px;float:right;border-radius: 50%;" alt="profile">
     <div>
         <h1>ritzfy</h1>
         <h3><em>On Computer Science, AI, Math etc</em></h3>
