backlinked to project and updated readme

--- a/gen/2023-11-25.html
+++ b/gen/2023-11-25.html
@@ -17,10 +17,11 @@
 
         <footer>
             <hr>
-            Copy, Right? |
-            <a href="https://www.linkedin.com/in/ritav-j-029a9b246">Linkedin</a>
+            <a href="https://github.com/ritzfy/blog-gen">copy, right?</a>
             |
-            <a href="https://github.com/ritzfy">Github</a>
+            <a href="https://www.linkedin.com/in/ritav-j-029a9b246">linkedin</a>
+            |
+            <a href="https://github.com/ritzfy">github</a>
         </footer>
     </body>
 </html>
