--- a/gen/2023-11-25.html
+++ b/gen/2023-11-25.html
@@ -19,7 +19,7 @@
             <hr>
             <a href="https://github.com/ritzfy/blog-gen">copy, right?</a>
             |
-            <a href="https://www.linkedin.com/in/ritav-j-029a9b246">linkedin</a>
+            <a href="https://www.linkedin.com/in/ritav-j">linkedin</a>
             |
             <a href="https://github.com/ritzfy">github</a>
         </footer>
