--- a/gen/2023-11-25.html
+++ b/gen/2023-11-25.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">    <nav>
         <ul class="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="/">Resume</a></li>
